# git-new-branch

./: .fast-format-x.yaml  .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  install.sh  release.toml
.github/workflows/: ci.yml  release.yml
docs/: CNAME  index.html  install.sh  style.css
src/: main.rs
