[package]
name = "git-new-branch"
version = "0.1.2"
edition = "2021"
description = "Create git branches with username prefix: gnb → username/YYMMDD"
license = "MIT"
repository = "https://github.com/BrianSigafoos/git-new-branch"
homepage = "https://github.com/BrianSigafoos/git-new-branch"
readme = "README.md"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI
cargo-dist-version = "0.28.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell"]
# Target platforms to build apps for
targets = [
  "aarch64-apple-darwin",
  "x86_64-apple-darwin",
  "x86_64-unknown-linux-gnu",
  "aarch64-unknown-linux-gnu",
]
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Whether to install an updater program
install-updater = false

[[bin]]
name = "gnb"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
colored = "2.1"
chrono = "0.4"

[profile.release]
lto = true
codegen-units = 1
strip = true

